# grpc-demo

./: .gitignore  README.md  requirements.txt  telemetry_pb2.py
agent-c/: AGENT_SPEC.md  CMakeLists.txt  Makefile  telemetry_agent.c  telemetry_agent.h
agent-py/: AGENT_SPEC.md  data_generator.py  telemetry_agent.py  telemetry_pb2_grpc.py
proto/: telemetry.proto
service/: SERVICE_SPEC.md  benchmark_telemetry_service.py  telemetry_service.py  test_telemetry_service.py
service/myenv/: pyvenv.cfg
